--- a/home.html
+++ b/home.html
@@ -42,24 +42,23 @@
             <p><strong>1-2-Switch</strong><br>There’s never been a party like this...play face-to-face with friends and have a blast facing off in quick-draw duels, milking cows, playing table tennis…and lots more.</p>
         </div>
 
-        <!-- Add more games as needed -->
     </section>
 
     <section id="upcoming-games">
         <h2>Other Games Coming Soon</h2>
         <div class="game">
             <img src="images/splatoon.png" alt="Splatoon">
-            <!-- Add content for Splatoon -->
+            Splatoon, coming soon!
         </div>
 
         <div class="game">
             <img src="images/marioodyssey.png" alt="Super Mario Odyssey">
-            <!-- Add content for Mario Odyssey -->
+            Super Mario Odyssey is currently only available to beta testors!
         </div>
 
         <div class="game">
             <img src="images/skyrim.png" alt="The Elder Scrolls V: Skyrim">
-            <!-- Add content for Skyrim -->
+            Skrim 2024 Edition!
         </div>
     </section>
 </body>
